# pyerrors

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  pytest.ini  setup.py
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug-report.yml
.github/workflows/: CI.yml  binder.yml  codeql.yml  docs.yml  examples.yml  flake8.yml  pytest.yml  release.yml  ruff.yml
docs/: index.html  pyerrors.html  search.js
docs/pyerrors/: correlators.html  covobs.html  dirac.html  fits.html  input.html  integrate.html  linalg.html  (+8 more)
examples/: 01_basic_example.ipynb  02_correlators.ipynb  02_pcac_example.ipynb  03_fit_example.ipynb  03_pcac_example.ipynb  04_fit_example.ipynb  04_matrix_operations.ipynb  05_correlators.ipynb  05_matrix_operations.ipynb  06_gevp.ipynb  07_data_management.ipynb  08_combined_fit_example.ipynb  base_style.mplstyle  example_combined_fit.ipynb  json_schema.json  my_db.sqlite
pyerrors/: __init__.py  combined_fits.py  correlators.py  covobs.py  dirac.py  fits.py  integrate.py  jackknifing.py  linalg.py  misc.py  mpm.py  npr.py  obs.py  pyerrors.py  roots.py  special.py  utils.py  version.py
tests/: benchmark_test.py  correlators_test.py  covobs_test.py  dirac_test.py  fits_test.py  input_test.ipynb  integrate_test.py  io_test.py  json_io_test.py  linalg_test.py  misc_test.py  mpm_test.py  obs_test.py  openQCD_in_test.py  pandas_test.py  pyerrors_test.py  roots_test.py  sfcf_in_test.py  special_test.py  test_correlators.py  test_fits.py  test_linalg.py  test_npr.py  test_pyerrors.py  test_roots.py  utils_in_test.py
(+42 files in other folders)
