[build-system]
requires = ["setuptools >= 63.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
extend-select = ["E", "W", "I", "B", "PIE", "PLE", "PLW", "UP", "NPY", "RUF"]
ignore = [
    "F403",     # star imports in __init__ files are intentional
    "E501",     # line too long
    "PLC0415",  # import outside top level
    "PLW2901",  # redefined loop name (too noisy)
    "RUF002",   # ambiguous unicode in docstrings (Greek letters)
]
